--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   /* Adds spacing between form elements */
   input,
   select,
-  fieldset {
+  fieldset, textarea {
     margin: 5px 0 15px 0;
   }
 
@@ -34,8 +34,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
     width: 30%;
     background-color: #0b63d5;
     color: white;
-    padding: 80px 10px 0 0;
-    margin: 10px 0;
+    padding: 8px 10px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
