change button colour to align with style guide

--- a/styles/style.css
+++ b/styles/style.css
@@ -32,7 +32,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   */
   input[type=submit] {
     width: 30%;
-    background-color: #0b63d5;
+    background-color: #5d79c0;
     color: white;
     padding: 8px 10px;
     border: none;
