--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,9 @@
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 /* Styles form inputs 
@@ -31,16 +34,16 @@ fieldset {
 /* Styles the submit button on forms 
   Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.asp
   */
-  input[type=submit] {
-    width: 30%;
-    background-color: #5d79c0;
-    color: white;
-    padding: 8px 10px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: auto;
-  }
+input[type="submit"] {
+  width: 30%;
+  background-color: #5d79c0;
+  color: white;
+  padding: 8px 10px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: auto;
+}
 
 /* Reduces the width of the main content on pages and centers it */
 main {
@@ -58,33 +61,119 @@ fieldset {
 .unbold {
   font-weight: normal;
 }
+/**********************************START ABOUT.HTML CSS**********************/
 
-.container {
-  text-align: center;
-  align-items: center;
-}
-
-.container h2 {
-  margin-top: 50px;
-}
-.about-text {
-  width: 640px;
-  padding: 10px;
-  border: 5px solid;
-  margin: auto;
-}
-
-.member-grid-row {
+.row {
   display: flex;
   flex-wrap: wrap;
-  padding: 0 4px;
-  width: 200px;
-  height: 200px;
-  margin: auto;
+  padding: 2em 1em;
+  text-align: center;
 }
 
-.member-grid-row img {
-  margin-top: 8px;
-  vertical-align: middle;
+.column {
   width: 100%;
+  padding: 0.5em 0;
 }
+
+.row h1 {
+  width: 100%;
+  text-align: center;
+  font-size: 3.5em;
+  color: black;
+}
+
+.card {
+  box-shadow: 0 0 2.2em rgba(25, 0, 0, 0.15);
+  padding: 3.5em 1em;
+  margin-bottom: 1.5em;
+  border-radius: 1.2em;
+  color: #1f033d;
+  cursor: pointer;
+  transition: 0.5s;
+}
+
+.card .image-container {
+  width: 8em;
+  height: 8em;
+  background-color: #a993ff;
+  padding: 0.5em;
+  border-radius: 50%;
+  margin: 0 auto 2em auto;
+}
+
+.card img {
+  width: 100%;
+  border-radius: 50%;
+  padding-bottom: 1em;
+}
+
+.card h3 {
+  font-weight: 550;
+  font-size: 1.5em;
+}
+
+.card p {
+  font-weight: 400;
+  text-transform: uppercase;
+  margin: 0.5em 0 1.5em 0;
+  letter-spacing: 1.8px;
+}
+
+.icons {
+  width: 50%;
+  min-width: 180px;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.card a {
+  text-decoration: none;
+  color: inherit;
+  font-size: 1.5em;
+}
+
+.card i {
+  transition: 0.5s;
+}
+
+.card:hover {
+  background: linear-gradient(#6045ea, #8567f7);
+  color: whitesmoke;
+}
+
+.card:hover .image-container {
+  transform: scale(1.175);
+}
+.card i:hover {
+  font-size: 200%;
+  color: #feceab;
+}
+
+@media screen and (min-width: 768px) {
+  section {
+    padding: 1em 7em;
+  }
+}
+
+@media screen and (min-width: 850px) {
+  section {
+    padding: 1em;
+  }
+  .card {
+    padding: 5em 1em;
+  }
+
+  .column {
+    flex: 0 0 33.33%;
+    min-width: 33.33%;
+    padding: 0 1em;
+  }
+}
+
+footer {
+  text-align: center;
+  font-size: 23px;
+  margin-bottom: 50px;
+}
+/**********************************END ABOUT.HTML CSS***********************/
