--- a/styles/about.css
+++ b/styles/about.css
@@ -1,3 +1,12 @@
+/*
+filename: about.css
+author: Simon Nguyen
+created: 09-03-2023
+last modified: 19-03-2023
+description: css for about.html
+*/
+
+/* General Rules */
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -5,6 +14,7 @@
   margin: 0;
   box-sizing: border-box;
 }
+/******************************* Start of card css **************************/
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -112,9 +122,28 @@
     padding: 0 1em;
   }
 }
+/******************************* End of card css **************************/
 
+/* Footer */
 footer {
   text-align: center;
   font-size: 23px;
   margin-bottom: 50px;
 }
+
+/******************************* Start of timetable css **************************/
+.timetable table {
+  border-collapse: collapse;
+  overflow: hidden;
+  margin-top: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 85%;
+  position: relative;
+}
+
+.timetable th {
+  height: 2em;
+}
+
+/******************************* End of timetable css **************************/
