--- a/styles/about.css
+++ b/styles/about.css
@@ -1,149 +1,169 @@
-/*
-filename: about.css
-author: Simon Nguyen
-created: 09-03-2023
-last modified: 19-03-2023
-description: css for about.html
-*/
-
-/* General Rules */
 * {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  padding: 0;
-  margin: 0;
+  font-family: "Open Sans", sans-serif;
   box-sizing: border-box;
 }
-/******************************* Start of card css **************************/
-.row {
+body {
+  color: #333;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 10px;
+}
+
+h2 {
+  margin-top: 40px;
+}
+
+h3 {
+  margin-top: 30px;
+}
+
+.container {
+  max-width: 968px;
+  margin: 0 auto;
+  padding: 50px;
+  background-color: #fff;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  border-radius: 5px solid black;
+  text-align: center;
   display: flex;
   flex-wrap: wrap;
-  padding: 2em 1em;
-  text-align: center;
+  justify-content: center;
+  margin-top: 30px;
 }
 
-.column {
-  width: 100%;
-  padding: 0.5em 0;
+.group-info {
+  display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  transition: all 0.5 ease-in-out;
 }
 
-.row h1 {
-  width: 100%;
-  text-align: center;
-  font-size: 3.5em;
-  color: black;
+.group-info dl {
+  flex: 1;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  padding: 20px;
+  border-radius: 5px;
+  text-align: left;
+}
+
+.group-info dt {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.group-info dd {
+  margin-left: 0;
+  margin-bottom: 0;
 }
 
 .card {
-  box-shadow: 0 0 2.2em rgba(25, 0, 0, 0.15);
-  padding: 3.5em 1em;
-  margin-bottom: 1.5em;
-  border-radius: 1.2em;
-  color: #1f033d;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  flex-direction: column;
+  width: 150px;
+  height: 200px;
+  margin: 10px;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  transition: all 0.5s ease;
   cursor: pointer;
-  transition: 0.5s;
-}
-
-.card .image-container {
-  width: 8em;
-  height: 8em;
-  background-color: #a993ff;
-  padding: 0.5em;
-  border-radius: 50%;
-  margin: 0 auto 2em auto;
 }
 
 .card img {
-  width: 100%;
+  margin-top: 15px;
+  max-width: 100px;
+  max-height: 100px;
   border-radius: 50%;
-  padding-bottom: 1em;
+  margin-bottom: 10px;
+  transition: all 0.5s ease;
 }
 
 .card h3 {
-  font-weight: 550;
-  font-size: 1.5em;
+  font-size: 18px;
+  margin: 0;
+  padding-top: 5px;
 }
-
 .card p {
-  font-weight: 400;
-  text-transform: uppercase;
-  margin: 0.5em 0 1.5em 0;
-  letter-spacing: 1.8px;
-}
-
-.icons {
-  width: 50%;
-  min-width: 180px;
-  margin: auto;
-  display: flex;
-  justify-content: space-around;
-}
-
-.card a {
-  text-decoration: none;
-  color: inherit;
-  font-size: 1.5em;
-}
-
-.card i {
-  transition: 0.5s;
-}
-
-.card:hover {
-  background: linear-gradient(#6045ea, #8567f7);
-  color: whitesmoke;
-}
-
-.card:hover .image-container {
-  transform: scale(1.175);
-}
-.card i:hover {
-  font-size: 200%;
-  color: #feceab;
-}
-
-@media screen and (min-width: 768px) {
-  section {
-    padding: 1em 7em;
-  }
-}
-
-@media screen and (min-width: 850px) {
-  section {
-    padding: 1em;
-  }
-  .card {
-    padding: 5em 1em;
-  }
-
-  .column {
-    flex: 0 0 33.33%;
-    min-width: 33.33%;
-    padding: 0 1em;
-  }
-}
-/******************************* End of card css **************************/
-
-/* Footer */
-footer {
+  font-size: 14px;
+  color: #666;
+  margin-top: 5px;
   text-align: center;
-  font-size: 23px;
-  margin-bottom: 50px;
+  transition: all 0.5s ease;
 }
 
-/******************************* Start of timetable css **************************/
+.timetable {
+  margin-top: 50px;
+  background-color: #f9f9f9;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  padding: 20px;
+  text-align: left;
+  cursor: pointer;
+}
+.timetable h2 {
+  margin-top: 0;
+  margin-bottom: 20px;
+  text-align: center;
+}
+
 .timetable table {
+  margin: 0;
   border-collapse: collapse;
-  overflow: hidden;
-  margin-top: 40px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 85%;
-  position: relative;
+  width: 100%;
+}
+
+.timetable th,
+.timetable td {
+  padding: 10px;
+  text-align: center;
+  border-bottom: 1px solid #ddd;
 }
 
 .timetable th {
-  height: 2em;
+  background-color: #333;
+  color: #fff;
 }
 
-/******************************* End of timetable css **************************/
+.mail {
+  margin-top: 50px;
+}
+
+.mail a {
+  display: inline-block;
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 6px;
+  text-decoration: none;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+  transition: 0.5s ease-in-out;
+}
+
+.mail a:hover {
+  transform: scale(1.2);
+  background-image: linear-gradient(#6045ea, #8567f7);
+  color: whitesmoke;
+}
+
+.card:hover {
+  transform: scale(1.2);
+  background: linear-gradient(#6045ea, #8567f7);
+  color: whitesmoke;
+}
+.card:hover > p {
+  color: white;
+}
+
+.card:hover > img {
+  transform: scale(1.1);
+}
