--- a/styles/about.css
+++ b/styles/about.css
@@ -1,13 +1,18 @@
 * {
-  font-family: "Open Sans", sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   box-sizing: border-box;
 }
 body {
   color: #333;
   margin: 0;
   padding: 0;
+  min-height: 100vh;
+  flex-direction: column;
 }
-
+#header {
+  position: sticky;
+}
 h1 {
   text-align: center;
   margin-top: 10px;
@@ -20,9 +25,18 @@ h2 {
 h3 {
   margin-top: 30px;
 }
+.container p {
+  margin-top: 20px;
+  margin-bottom: 40px;
+}
+
+.mail p {
+  margin-top: 0px;
+  margin-bottom: 20px;
+}
 
 .container {
-  max-width: 968px;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 50px;
   background-color: #fff;
@@ -166,4 +180,8 @@ h3 {
 
 .card:hover > img {
   transform: scale(1.1);
+}
+
+footer {
+  margin-top: auto;
 }
