--- a/styles/index.css
+++ b/styles/index.css
@@ -1,55 +1,60 @@
-.header{
-    background-color: red;
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  box-sizing: border-box;
 }
 
-.main-img{
-    width:300px;
+.header {
+  background-color: red;
 }
 
-.row{
-    text-align: center;
-    margin-bottom:px;
+.main-img {
+  width: 300px;
 }
 
-.column{
-    align-content: center;
-    float:left;
-    width:31%;
-    margin-bottom:50px;
-    margin:10px;
-    border:2px;
-    background-color: aqua;
-    border-style:solid;
-    border-color:black;
+.row {
+  text-align: center;
+  margin-bottom: px;
 }
 
-.review-box{
-    text-align:center;
-}
-.review-box-indi{
-    float:left;
-    width:45%;
-    margin:20px;
-    border:2px;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: black;
-}
-
-.profile-pic{
-    width: 50px;
-    margin: 10px;
-    float: left;
-    border-radius: 25px;
-    border-style: solid;
-    border-color:black;
-    border-width: 2px;
+.column {
+  align-content: center;
+  float: left;
+  width: 31%;
+  margin-bottom: 50px;
+  margin: 10px;
+  border: 2px;
+  background-color: aqua;
+  border-style: solid;
+  border-color: black;
 }
 
-.review-wording{
-    float:left;
-    text-align: justify;
-    width: 250px;
-    margin-left: 20px;
+.review-box {
+  text-align: center;
+}
+.review-box-indi {
+  float: left;
+  width: 45%;
+  margin: 20px;
+  border: 2px;
+  border-radius: 10px;
+  border-style: solid;
+  border-color: black;
 }
 
+.profile-pic {
+  width: 50px;
+  margin: 10px;
+  float: left;
+  border-radius: 25px;
+  border-style: solid;
+  border-color: black;
+  border-width: 2px;
+}
+
+.review-wording {
+  float: left;
+  text-align: justify;
+  width: 250px;
+  margin-left: 20px;
+}
