--- a/styles/main.css
+++ b/styles/main.css
@@ -5,17 +5,79 @@ created: 29-Mar-2023
 description: This file is the main file of whole css!
 TODO: Merging all small css -> a big css file !
 */
+
 /**************************** General Styling ***********************/
 * {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   box-sizing: border-box;
-  margin: 0;
-  padding: 0;
 }
 /******************************************************************/
 
+/**************************** Start of index.css ***********************/
+.index-header {
+  background-color: red;
+}
+
+.index-main .main-img {
+  width: 300px;
+}
+
+.index-main .row {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.index-main .column {
+  align-content: center;
+  float: left;
+  width: 31%;
+  margin-bottom: 50px;
+  margin: 10px;
+  border: 2px;
+  background-color: aqua;
+  border-style: solid;
+  border-color: black;
+}
+
+.index-main .review-box {
+  text-align: center;
+}
+.index-main .review-box-indi {
+  float: left;
+  width: 45%;
+  margin: 20px;
+  border: 2px;
+  border-radius: 10px;
+  border-style: solid;
+  border-color: black;
+}
+
+.index-main .profile-pic {
+  width: 50px;
+  margin: 10px;
+  float: left;
+  border-radius: 25px;
+  border-style: solid;
+  border-color: black;
+  border-width: 2px;
+}
+
+.index-main .review-wording {
+  float: left;
+  text-align: justify;
+  width: 250px;
+  margin-left: 20px;
+}
+
+/**************************** End of index.css ***********************/
+
 /**************************** Start of about.css ***********************/
+.about-class * {
+  margin: 0;
+  padding: 0;
+}
+
 #about-body {
   color: #333;
   margin: 0;
@@ -197,6 +259,226 @@ TODO: Merging all small css -> a big css file !
   margin-top: auto;
 }
 /**************************** End of about.css ***********************/
+
+/**************************** Start of job.css ***********************/
+
+/* the whole content */
+.job-class * {
+  padding: 3;
+  margin: 3;
+}
+#job-body {
+  /* margin: 1em 2em 1em 2em; */
+  margin: auto;
+  word-wrap: break-word;
+  line-height: 1.25em;
+  font-size: 1em;
+  width: 80vw;
+  text-align: left;
+}
+
+/* relating to design n layout of boxes */
+/* adding margin for each section (each jobs' descriptions) */
+#job-main section {
+  margin: 2em 0 0 0;
+}
+/* sections with contents placing in boxes, namely the tables and some descriptions for the jobs */
+#job-main dl,
+#job-main table,
+#job-main tr,
+#job-main td {
+  border: 0.5px solid rgb(51, 74, 75);
+  border-collapse: collapse;
+}
+/* small index and their content (beneath the job title) */
+#job-main dl {
+  border-radius: 5px;
+  padding: 0.5em 1em 0.5em 1em;
+  width: fit-content;
+}
+
+/* relating to text - the actual content */
+/* the title "Job description" */
+#job-main h1 {
+  color: black;
+  font-size: 3em;
+}
+/* job title */
+#job-main section h2 {
+  font-size: 1.75em;
+  color: rgb(100, 125, 209);
+}
+/* indexes */
+#job-main dt,
+#job-main h2,
+#job-main h3,
+#job-main h4 {
+  color: rgb(51, 51, 51);
+}
+/* big indexes (h3 only) */
+#job-main h3 {
+  font-size: 1.5em;
+}
+/* smaller indexes (h4) */
+#job-main h4 {
+  font-size: 1.25em;
+}
+/* indexes inside bordered boxes (dt) */
+#job-main dt {
+  margin: 0.5em 0 0.125em 0;
+}
+/* content of every indexes */
+#job-main p,
+#job-main li,
+#job-main td,
+#job-main dd {
+  color: rgb(51, 74, 75);
+}
+/* text inside tables */
+#job-main td {
+  padding: 0.5em 1em 0.5em 1em;
+}
+/* paragraph indentation */
+#job-main p {
+  text-indent: 2em;
+}
+/* in-text citation - linking to the reference section */
+#job-main sup {
+  font-size: 0.5em;
+  font-weight: bold;
+}
+
+/* the horizontal rule aka the thematic break (hr) */
+#job-main hr {
+  border-bottom: 0.5px solid rgb(100, 125, 126);
+  width: 80%;
+  margin: 2em 0em 0em 0em;
+}
+
+/* links */
+#job-main a:link {
+  color: rgb(100, 125, 126);
+  text-decoration: none;
+}
+
+#job-main a:visited {
+  color: rgb(80, 103, 176);
+  text-decoration: none;
+}
+#job-main a:hover {
+  color: rgb(117, 143, 230);
+  text-decoration: underline;
+}
+#job-main a:active {
+  color: rgb(51, 51, 51);
+  text-decoration: underline;
+}
+
+/**************************** End of job.css ***********************/
+
+/**************************** Start of apply.css ***********************/
+
+/* Styles form inputs for better appearance
+Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.asp
+*/
+.apply-input[type="text"],
+.apply-input[type="tel"],
+.apply-input[type="email"],
+.apply-input[type="date"],
+.apply-textarea,
+.apply-select {
+  width: 100%;
+  padding: 12px;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+.apply-h1 {
+  font-size: 80px;
+  text-align: center;
+}
+
+.apply-h2 {
+  text-align: center;
+  font-weight: normal;
+}
+
+/* Adds spacing between inputs in a table */
+.apply-td {
+  padding-right: 10px;
+}
+
+/* Adds spacing between form elements */
+.apply-input,
+.apply-textarea,
+.apply-select {
+  margin: 10px 0 0 0;
+  display: inline-block;
+}
+
+/* Adds spacing between form labels */
+.apply-label {
+  margin: 20px 0 0 0;
+  display: inline-block;
+}
+
+/* Adds spacing and borders on fieldsets to easier distinguish between sections */
+.apply-section .apply-gender-list {
+  margin: 20px 0 0 0;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+/* Removes margin from the 'gender_list' ID fieldset */
+.apply-gender-list > label {
+  margin: 0;
+}
+
+/* Styles the submit button on forms 
+  Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.asp
+  */
+.apply-input[type="submit"] {
+  width: 30%;
+  background-color: #5d79c0;
+  color: white;
+  padding: 15px 20px;
+  border: none;
+  border-radius: 7px;
+  font-size: 105%;
+  margin-bottom: 100px;
+}
+
+/* Reduces the width of the main content on pages and centers it */
+.apply-container {
+  width: 35%;
+  margin: auto;
+}
+
+/* Extends width of the table to take up all space allowed */
+.apply-table {
+  width: 100%;
+}
+
+/* Adapted from https://form.taxi/en/sample-forms/job-application-form */
+.apply-section {
+  font-size: 100%;
+  margin-top: 10px;
+  margin-bottom: 1.5rem;
+  border: 0;
+  padding: 0;
+}
+
+/* Adapted from https://form.taxi/en/sample-forms/job-application-form */
+.apply-section > legend {
+  font-weight: 700;
+  font-size: 130%;
+  padding: 0;
+  padding-top: 15px;
+}
+
+/**************************** End of apply.css ***********************/
 
 /**************************** Start of Header and Footer ***********************/
 /* Header navigation */
