Add TODO task for the next week

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,7 @@ filename: main.css
 author: Simon Nguyen, Nathan Wijaya, Mai An Nguyen, Nhat Minh Tran, Amiru Manthrige
 created: 29-Mar-2023
 description: This file is the main file of whole css!
-TODO: Merging all small css -> a big css file !
+TODO: Implementing enhancements for all files :)
 */
 
 /**************************** General Styling ***********************/
