--- a/styles/main.css
+++ b/styles/main.css
@@ -88,6 +88,7 @@ TODO: Implementing enhancements for all files :)
 .about-h1 {
   text-align: center;
   margin-top: 10px;
+  color: black;
 }
 
 .about-h2 {
@@ -112,7 +113,6 @@ TODO: Implementing enhancements for all files :)
   margin: 0 auto;
   padding: 50px;
   background-color: #fff;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   border-radius: 5px solid black;
   text-align: center;
   display: flex;
@@ -396,8 +396,9 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
 }
 
 .apply-h1 {
-  font-size: 80px;
+  font-size: 5vw;
   text-align: center;
+  margin: 0;
 }
 
 .apply-h2 {
@@ -452,8 +453,9 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
 
 /* Reduces the width of the main content on pages and centers it */
 .apply-container {
-  width: 35%;
+  width: 60%;
   margin: auto;
+  margin-top: 85px;
 }
 
 /* Extends width of the table to take up all space allowed */
@@ -477,6 +479,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   padding: 0;
   padding-top: 15px;
 }
+
 
 /**************************** End of apply.css ***********************/
 
@@ -606,3 +609,42 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
 }
 
 /**************************** End of Header and Footer ***********************/
+
+/**************************** Start of Enhancement 1 ***********************/
+
+/* https://codepen.io/denic/pen/GRoOxbM
+https://www.sitepoint.com/css-typewriter-effect/ */
+
+.header-container{
+  display: inline-block;
+}
+.apply-typed-out{
+  overflow: hidden;
+  border-right: 4px solid black;
+  white-space: nowrap;
+  animation: typing 1.5s steps(35, end) forwards, blink .5s step-end infinite alternate;
+  font-size: 40px;
+  width: 0;
+}
+
+.about-typed-out{
+  overflow: hidden;
+  border-right: 4px solid black;
+  white-space: nowrap;
+  animation: typing 1.5s steps(35, end) forwards, blink .5s step-end infinite alternate;
+  font-size: 35px;
+  width: 0;
+}
+
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+@keyframes blink {
+  50% {
+    border-color: transparent
+  }
+}
+
+/**************************** End of Enhancement 1 ***********************/
