add typing effect to job.html

--- a/styles/main.css
+++ b/styles/main.css
@@ -261,13 +261,16 @@ TODO: Implementing enhancements for all files :)
 /**************************** End of about.css ***********************/
 
 /**************************** Start of job.css ***********************/
+.job-h1 {
+  text-align: center;
+}
 
 /* the whole content */
 .job-class * {
   padding: 3;
   margin: 3;
 }
-#job-body {
+#job-main {
   /* margin: 1em 2em 1em 2em; */
   margin: auto;
   word-wrap: break-word;
@@ -275,6 +278,7 @@ TODO: Implementing enhancements for all files :)
   font-size: 1em;
   width: 80vw;
   text-align: left;
+
 }
 
 /* relating to design n layout of boxes */
@@ -302,6 +306,7 @@ TODO: Implementing enhancements for all files :)
 #job-main h1 {
   color: black;
   font-size: 3em;
+  
 }
 /* job title */
 #job-main section h2 {
@@ -634,6 +639,16 @@ https://www.sitepoint.com/css-typewriter-effect/ */
   animation: typing 1.5s steps(35, end) forwards, blink .5s step-end infinite alternate;
   font-size: 35px;
   width: 0;
+}
+
+.job-typed-out{
+  overflow: hidden;
+  border-right: 4px solid black;
+  white-space: nowrap;
+  animation: typing 1.5s steps(35, end) forwards, blink .5s step-end infinite alternate;
+  font-size: 25px;
+  width: 0;
+  text-align: center;
 }
 
 @keyframes typing {
