--- a/styles/main.css
+++ b/styles/main.css
@@ -268,7 +268,7 @@ TODO: Implementing enhancements for all files :)
   padding: 3;
   margin: 3;
 }
-#job-body {
+#job-main {
   /* margin: 1em 2em 1em 2em; */
   margin: auto;
   word-wrap: break-word;
