--- a/styles/main.css
+++ b/styles/main.css
@@ -490,31 +490,34 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   height: 75px;
   line-height: 75px; /* height between words in nav */
   padding: 0px, 100px;
-  position: fixed;
-  background: #ccd5f8; /* #EDF1FF */
-  text-align: center;
   position: static;
+  background: #d9ecfd; /* header color backup #EDF1FF #ccd5f8; footer color backup 00093c 2d0b00 */
+  background: linear-gradient(to right, #78828a, #283b4e, #451100);
+  text-align: center;
 }
 
 /* logo on the left */
 #header-nav .logo {
-  font-size: 30px;
+  width: 80px;
+  height: auto;
   font-weight: bold;
   float: left;
   color: #333;
   text-transform: uppercase;
-  letter-spacing: 3px;
+  letter-spacing: 1px;
   cursor: pointer; /* show cursor not the mouse */
   justify-content: center;
 }
 
 #header-nav ul {
   justify-content: center;
+  /* float: left; */
   margin-top: 0px;
 }
 /* display horizontally the nav */
+/* display horizontally the nav */
 #header-nav li {
-  display: inline;
+  display: inline-block;
   list-style: none;
   /* not showing dot of ul ol */
 }
@@ -523,7 +526,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   font-size: 18px;
   text-transform: uppercase;
   padding: 30px 114px;
-  color: #333;
+  color: white;
   text-decoration: none;
 }
 /*decoration more transition of header */
@@ -538,10 +541,10 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   /* position: absolute; */
   bottom: 0;
   /* color change left to right of linear-gradient */
-  background: linear-gradient(to right, #00093c, #2d0b00);
+  background: linear-gradient(to right, #78828a, #283b4e, #451100);
   color: #fff;
   padding: 20px 0 10px;
-  /* border-top-left-radius: 125px; */
+  border-top-left-radius: 120px;
   font-size: 13px;
   line-height: 12px;
 }
@@ -607,6 +610,16 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   border: 0;
   border-bottom: 1px solid #333;
   margin: 10px auto;
+}
+.footer-col a,
+.footer-col h3,
+.footer-col p {
+  transition: 0.3s ease-in-out;
+}
+.footer-col a:hover,
+.footer-col h3:hover,
+.footer-col p:hover {
+  color: #9bc7f4;
 }
 
 /**************************** End of Header and Footer ***********************/
