--- a/styles/main.css
+++ b/styles/main.css
@@ -622,6 +622,29 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   color: #9bc7f4;
 }
 
+@media screen and (min-width: 768px) {
+  #header-nav {
+    height: 150%;
+  }
+  .footer-row {
+    flex-wrap: nowrap;
+  }
+
+  .footer-col {
+    flex-basis: 25%;
+    text-align: left;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  #header-nav {
+    height: 120%;
+  }
+  .footer-col {
+    flex-basis: 20%;
+  }
+}
+
 /**************************** End of Header and Footer ***********************/
 
 /**************************** Start of Enhancement 1 ***********************/
