--- a/styles/style.css
+++ b/styles/style.css
@@ -262,6 +262,11 @@ TODO: Implementing enhancements for all files :)
 
 /**************************** Start of job.css ***********************/
 
+.job-class * {
+  margin: 3;
+  padding: 3;
+}
+
 /* the whole content */
 #job-main {
   /* margin: 1em 2em 1em 2em; */
@@ -494,6 +499,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   background: #d9ecfd; /* header color backup #EDF1FF #ccd5f8; footer color backup 00093c 2d0b00 */
   background: linear-gradient(to right, #78828a, #283b4e, #451100);
   text-align: center;
+  clear: both;
 }
 
 /* logo on the left */
