--- a/styles/style.css
+++ b/styles/style.css
@@ -439,6 +439,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   margin: 20px 0 0 0;
   border-radius: 5px;
   border: 1px solid #ccc;
+  padding: 10px;
 }
 
 /* Removes margin from the 'gender_list' ID fieldset */
@@ -671,7 +672,7 @@ https://www.sitepoint.com/css-typewriter-effect/ */
   text-align: center;
   display: flex;
   justify-content: center;
-  margin-top: 130px;
+  margin-top: 5vw;
 }
 
 /* Animation for apply page heading */
