--- a/styles/style.css
+++ b/styles/style.css
@@ -271,9 +271,10 @@ TODO: Implementing enhancements for all files :)
 /**************************** Start of job.css ***********************/
 
 .job-class * {
-  margin: 3;
-  padding: 3;
+  margin: 0;
+  padding: 0;
 }
+
 
 /* the whole content */
 #job-main {
@@ -303,8 +304,10 @@ TODO: Implementing enhancements for all files :)
 /* small index and their content (beneath the job title) */
 #job-main dl {
   border-radius: 5px;
+  margin: 1em;
   padding: 0.5em 1em 0.5em 1em;
   width: fit-content;
+  
 }
 
 /* relating to text - the actual content */
@@ -313,11 +316,14 @@ TODO: Implementing enhancements for all files :)
   color: black;
   text-align: center;
   font-size: 4vw;
+  margin: 1em;
+  
 }
 /* job title */
 #job-main section h2 {
   font-size: 1.75em;
   color: #6378bb;
+  padding: 0.75em 0 0.75em 0;
 }
 /* indexes */
 #job-main dt,
@@ -325,19 +331,25 @@ TODO: Implementing enhancements for all files :)
 #job-main h3,
 #job-main h4 {
   color: #242424;
+  
 }
-
 /* big indexes (h3 only) */
 #job-main h3 {
   font-size: 1.5em;
+  padding: 0.5em 0 0.5em 0;
 }
 /* smaller indexes (h4) */
 #job-main h4 {
   font-size: 1.25em;
+  padding: 0.5em 0 0.5em 0;
 }
 /* indexes inside bordered boxes (dt) */
 #job-main dt {
   margin: 0.5em 0 0.125em 0;
+}
+/* content of those indexes */
+#job-main dd {
+  text-indent: 2em;
 }
 /* content of every indexes */
 #job-main p,
@@ -353,6 +365,11 @@ TODO: Implementing enhancements for all files :)
 /* paragraph indentation */
 #job-main p {
   text-indent: 2em;
+  text-align: left;
+}
+/* bullet pt and ordered list indentation */
+#job-main ul, #job-main ol {
+  padding: 0.25em 0 0.5em 2em;
 }
 /* in-text citation - linking to the reference section */
 #job-main sup {
@@ -364,7 +381,7 @@ TODO: Implementing enhancements for all files :)
 #job-main hr {
   border-bottom: 0.5px solid #242424;
   width: 80%;
-  margin: 2em 0em 0em 0em;
+  margin: 2em 0em 1em 0em;
 }
 
 /* links */
