--- a/styles/style.css
+++ b/styles/style.css
@@ -10,8 +10,8 @@ TODO: Implementing enhancements for all files :)
 
 /* Import font from file */
 @font-face {
-  font-family: 'Inter';
-  src: url(/styles/Inter-VariableFont_slnt\,wght.ttf) ;
+  font-family: "Inter";
+  src: url(/styles/Inter-VariableFont_slnt\,wght.ttf);
 }
 
 /* Apply font to all text */
@@ -88,11 +88,12 @@ TODO: Implementing enhancements for all files :)
 
 #about-body {
   color: #333;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
   min-height: 100vh;
   flex-direction: column;
 }
+
 .about-h1 {
   text-align: center;
   font-size: 4vw;
@@ -126,7 +127,7 @@ TODO: Implementing enhancements for all files :)
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  margin-left: 288.5;
+  align-content: center;
   margin-bottom: 30px;
 }
 
@@ -242,25 +243,6 @@ TODO: Implementing enhancements for all files :)
   text-decoration: none;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
   transition: 0.5s ease-in-out;
-}
-
-.about-mail a:hover {
-  transform: scale(1.2);
-  background-image: linear-gradient(#6045ea, #8567f7);
-  color: whitesmoke;
-}
-
-.about-card:hover {
-  transform: scale(1.2);
-  background: linear-gradient(#6045ea, #8567f7);
-  color: whitesmoke;
-}
-.about-card:hover > p {
-  color: white;
-}
-
-.about-card:hover > img {
-  transform: scale(1.1);
 }
 
 #about-footer {
@@ -538,6 +520,8 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   height: auto;
   font-weight: bold;
   float: left;
+  display: inline;
+  /* margin-left: 50px; */
   color: #333;
   text-transform: uppercase;
   letter-spacing: 1px;
@@ -599,7 +583,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   padding: 10px;
 }
 /*team logo */
-.logo {
+#general-footer .logo {
   width: 120px;
   margin-bottom: 30px;
 }
@@ -767,3 +751,24 @@ https://www.sitepoint.com/css-typewriter-effect/ */
 }
 
 /**************************** End of Enhancement 1 ***********************/
+
+/**************************** Start of Enhancement 2 ***********************/
+
+.about-card:hover {
+  transform: scale(1.2);
+  background: linear-gradient(#6045ea, #8567f7);
+  color: whitesmoke;
+}
+.about-card:hover > p {
+  color: white;
+}
+
+.about-card:hover > img {
+  transform: scale(1.1);
+}
+.about-mail a:hover {
+  transform: scale(1.2);
+  background-image: linear-gradient(#6045ea, #8567f7);
+  color: whitesmoke;
+}
+/**************************** End of Enhancement 2 ***********************/
