--- a/styles/style.css
+++ b/styles/style.css
@@ -495,6 +495,13 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
 
 /**************************** End of apply.css ***********************/
 
+/**************************** Start of enhancements.css ***********************/
+
+.enhancements-main {
+  padding: 40px;
+}
+/**************************** End of enhancements.css ***********************/
+
 /**************************** Start of Header and Footer ***********************/
 /* Header navigation */
 #header-nav {
