finally fixed my errors i love this world <3

--- a/styles/style.css
+++ b/styles/style.css
@@ -91,6 +91,7 @@ TODO: Implementing enhancements for all files :)
   /* margin: 0;
   padding: 0; */
   min-height: 100vh;
+  display: flex;
   flex-direction: column;
 }
 
