--- a/styles/style.css
+++ b/styles/style.css
@@ -585,10 +585,12 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   flex-basis: 25%;
   padding: 10px;
 }
+
 /*team logo */
 #general-footer .logo {
   width: 120px;
   margin-bottom: 30px;
+  transition: 0.3s ease-in-out;
 }
 
 /* col 2 email phone */
@@ -601,6 +603,12 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   width: fit-content;
   border-bottom: 1px solid #333;
   margin: 20px 0;
+  cursor: pointer;
+}
+
+.footer-email-id a {
+  text-decoration: none;
+  color: white;
 }
 
 .footer-col ul li {
@@ -628,6 +636,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   border: 0;
   outline: none;
 }
+
 /* copy right the end */
 .footer-col hr {
   width: 95%;
@@ -640,10 +649,16 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
 .footer-col p {
   transition: 0.3s ease-in-out;
 }
+
 .footer-col a:hover,
 .footer-col h3:hover,
 .footer-col p:hover {
   color: #9bc7f4;
+  transform: scale(1.2);
+}
+
+#general-footer .logo:hover {
+  transform: scale(1.2);
 }
 
 @media screen and (min-width: 768px) {
