--- a/styles/style.css
+++ b/styles/style.css
@@ -75,6 +75,7 @@ h1 {
   margin-right: 30px;
   margin-left: 30px;
   border-radius: 40px;
+  transition: 0.5s ease-in-out;
 }
 
 .img .first-para {
@@ -179,6 +180,10 @@ h2 {
 selector:hover {
   transform: translateY(-5px);
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+}
+
+.img-2:hover {
+  transform: scale(1.1);
 }
 
 /**************************** End of index.css ***********************/
