--- a/styles/style.css
+++ b/styles/style.css
@@ -100,6 +100,7 @@ h1 {
   background-color: #ccd5f8;
   border-style: solid;
   border-radius: 20px;
+  cursor: pointer;
 }
 .img .column:hover {
   transform: scale(1.1);
