--- a/styles/style.css
+++ b/styles/style.css
@@ -30,30 +30,9 @@ ul {
 }
 
 h1 {
-  margin: 0;
+  margin-bottom: 10px;
   text-align: center;
-  background-image: linear-gradient(
-    -225deg,
-    #231557 0%,
-    #44107a 29%,
-    #ff1361 67%,
-    #fff800 100%
-  );
-  background-size: auto auto;
-  background-clip: border-box;
-  background-size: 200% auto;
-  color: #fff;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: textclip 2s linear infinite;
-  font-size: 40px;
-}
-
-@keyframes textclip {
-  to {
-    background-position: 200% center;
-  }
+  font-size: 4vw;
 }
 
 .img {
