--- a/styles/style.css
+++ b/styles/style.css
@@ -493,6 +493,9 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
   box-sizing: border-box;
 }
 
+.apply-input[type="submit"] {
+  cursor: pointer;
+}
 .apply-h1 {
   font-size: 4vw;
   text-align: center;
@@ -649,7 +652,7 @@ Adapted from W3Schools - https://www.w3schools.com/howto/howto_css_stacked_form.
 
 /* Changes the colour of the link when the user is on the page */
 #selected-page {
-  background-color: #6777B6;
+  background-color: #6777b6;
   transition: 0.5s ease-in;
 }
 
