--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,7 @@ h1 {
   margin-bottom: 0;
   width: 100%;
   height: 100vh;
-  background-image: url("images/ha.png");
+  background-image: url("../images/ha.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
