--- a/styles/style.css
+++ b/styles/style.css
@@ -396,6 +396,8 @@ selector:hover {
 #job-main h3,
 #job-main h4 {
   color: #242424;
+  text-align: left;
+  margin-bottom: 0.5em;
 }
 /* big indexes (h3 only) */
 #job-main h3 {
