--- a/styles/style.css
+++ b/styles/style.css
@@ -22,18 +22,29 @@ description: This file is the main file of whole css!
 /******************************************************************/
 
 /**************************** Start of index.css ***********************/
-body {
+.index-body {
   margin: 0;
   display: block;
-  margin-top: 0;
-  margin-bottom: 0;
+  position: relative;
+  height: 100%;
+
+}
+
+/* add background image */
+.index-body::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
+  z-index: -1;  
   background-image: url("../images/ha.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  opacity: 0.4;
 }
 ul {
   margin: 0;
